k8s/helm/manifest-operator-0.29.0.yaml
---
# Source: cass-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cass-operator
  labels:     
    app.kubernetes.io/name: cass-operator
    helm.sh/chart: cass-operator-0.29.0
    app.kubernetes.io/instance: cass-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: k8ssandra-cass-operator-cass-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cass-operator
      app.kubernetes.io/instance: cass-operator
      app.kubernetes.io/part-of: k8ssandra-cass-operator-cass-operator
  template:
    metadata:
      labels:        
        app.kubernetes.io/name: cass-operator
        helm.sh/chart: cass-operator-0.29.0
        app.kubernetes.io/instance: cass-operator
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: k8ssandra-cass-operator-cass-operator
    spec:
      serviceAccountName: cass-operator
      securityContext:
        {}
      containers:
        - name: cass-operator
          securityContext:
            readOnlyRootFilesystem: true
            runAsGroup: 65534
            runAsNonRoot: true
            runAsUser: 65534
          image: "docker.io/datastax/cass-operator:1.6.0"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /tmp/
              name: tmpconfig-volume
              readOnly: false
          livenessProbe:
            exec:
              command:
                - pgrep
                - ".*operator"
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - stat
                - "/tmp/operator-sdk-ready"
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 1
          resources:
            {}
      volumes:
        - name: tmpconfig-volume
          emptyDir:
            medium: "Memory"
        - name: cass-operator-certs-volume
          secret:
            secretName: cass-operator-webhook-config
