k8s/helm/manifest-operator.yaml
---
# Source: cass-operator/templates/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cass-operator-webhook-service
  labels:     
    app.kubernetes.io/name: cass-operator
    helm.sh/chart: cass-operator-0.44.1
    app.kubernetes.io/instance: cass-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: k8ssandra-cass-operator-cass-operator
spec:
  ports:
    - port: 443
      targetPort: 9443
  selector:
    control-plane: cass-operator-controller-manager
---
# Source: cass-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cass-operator
  labels:     
    app.kubernetes.io/name: cass-operator
    helm.sh/chart: cass-operator-0.44.1
    app.kubernetes.io/instance: cass-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: k8ssandra-cass-operator-cass-operator
    control-plane: cass-operator-controller-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cass-operator
      app.kubernetes.io/instance: cass-operator
      app.kubernetes.io/part-of: k8ssandra-cass-operator-cass-operator
  template:
    metadata:
      labels:        
        app.kubernetes.io/name: cass-operator
        helm.sh/chart: cass-operator-0.44.1
        app.kubernetes.io/instance: cass-operator
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: k8ssandra-cass-operator-cass-operator
        control-plane: cass-operator-controller-manager
    spec:
      serviceAccountName: cass-operator
      securityContext:
        {}
      containers:
        - name: cass-operator
          args:
          - --config=/configs/controller_manager_config.yaml
          command:
          - /manager
          securityContext:
            readOnlyRootFilesystem: true
            runAsGroup: 65534
            runAsNonRoot: true
            runAsUser: 65534
          image: docker.io/k8ssandra/cass-operator:v1.17.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cass-operator-certs-volume
              readOnly: true
            - mountPath: /configs
              name: manager-config
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            {}
      volumes:
        - name: cass-operator-certs-volume
          secret:
            defaultMode: 420
            secretName: cass-operator-webhook-server-cert
        - configMap:
            name: cass-operator-manager-config
          name: manager-config
---
# Source: cass-operator/templates/validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: cass-operator-validating-webhook-configuration
  labels:     
    app.kubernetes.io/name: cass-operator
    helm.sh/chart: cass-operator-0.44.1
    app.kubernetes.io/instance: cass-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: k8ssandra-cass-operator-cass-operator
  annotations:
    cert-manager.io/inject-ca-from: cass-operator/cass-operator-serving-cert
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: cass-operator-webhook-service
      namespace: cass-operator
      path: /validate-cassandra-datastax-com-v1beta1-cassandradatacenter
  failurePolicy: Fail
  name: vcassandradatacenter.kb.io
  rules:
  - apiGroups:
    - cassandra.datastax.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - cassandradatacenters
  sideEffects: None
